--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ html{
 
 
 body{
-    background-color: #3C3C3B;
+    background-color: #3C3C3B!important;
     margin: 0px;
     padding: 0px;
 }
@@ -138,7 +138,7 @@ i:hover{
 }
 
 /*--header--*/
-.header{
+.cabezera{
     background-color: rgba(255,255,255,0.8);
     display: flex;
     flex-direction: row;
@@ -161,20 +161,9 @@ i:hover{
 }
 
 nav{
-width: auto;
+width: 90%;
 }
 
-nav ul{
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    gap: 30px;
-}
-
-nav ul li{
-    list-style: none;
-    text-align: right;
-}
 
 .menu__small li{
     position: relative;
@@ -458,8 +447,8 @@ form{
 
 /*--card--*/
 .card{
-    border-radius: 16px;
-    max-width: 256px;
+    border-radius: 16px!important;
+    max-width: 356px;
     height: auto;
     display: grid;
     grid-template-columns: 66px 180px;
@@ -472,10 +461,7 @@ form{
     background-color: #00A18F;
     margin-bottom: 40px;
     box-shadow: 10px 10px 0px #00A18F;
-}
-
-.card__grisC{
-    background-color: #818180;
+    background-color: #818180!important;
 }
 
 
@@ -680,15 +666,11 @@ justify-content: space-between;
 }
 
 @media screen and (max-width:719px) {
-    .menu__main,hr.linea{
-        display:none;
-    }
+ 
 }
 
 @media screen and (min-width:720px) {
-    .menu__small{
-        display:none;
-    }
+
     .portfolio_grid{
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: repeat(4, 300px);
@@ -702,6 +684,7 @@ justify-content: space-between;
         flex-direction: row;
         gap: 16px;
     }
+    
     #final{
         flex-direction: column;
         height: 500px;
