--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,11 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 /*--Generales--*/
+$verde: #00A18F;
+$biege: #FFF8E1;
+$gris: #3C3C3B;
+$violeta:#4E3E78;
+
 *{
     font-family: 'Fira Sans', sans-serif;
     margin-block-start: 0px;
@@ -16,7 +21,7 @@ html{
 }
 
 body{
-    background-color: #3C3C3B!important;
+    background-color: $gris!important;
     margin: 0px;
     padding: 0px;
 }
@@ -43,16 +48,25 @@ body{
 
 
 /*--Colores--*/
+
+
 .verde{
-    color: #00A18F!important;
+    color: $verde!important;
 }
 
 .beige{
-    color:  #FFF8E1!important;
+    color: $biege!important;
 }
 
 .gris{
-    color:  #3C3C3B!important;
+    color: $gris!important;
+}
+.violeta{
+    color: $violeta!important;
+}
+
+.blanco{
+    color: #fff!important;
 }
 /*--Fin-Colores--*/
 
@@ -99,7 +113,7 @@ h6{
 
 /*--Botones--*/
 .buttons{
-    color:#FFF8E1;
+    color: $biege;
     min-width: 180px;
     height: 36px;
     border-radius: 8px;
@@ -110,27 +124,27 @@ h6{
 }
 
 .button__green{
-    background-color:#00A18F;
-    box-shadow: 0px 4px 4px #4E3E78;
+    background-color: $verde;
+    box-shadow: 0px 4px 4px $violeta;
 }
 
 .button__violeta{
-    background-color:#4E3E78;
-    box-shadow: 0px 4px 4px #00A18F;
+    background-color:$violeta;
+    box-shadow: 0px 4px 4px $verde;
 }
 
 .button__green:hover{
     scale: 115%;
-    box-shadow: 0px 10px 10px #3C3C3B;
+    box-shadow: 0px 10px 10px $gris;
     transition: 300ms ease-in-out;
-    background-color: #4E3E78;
+    background-color: $violeta;
 }
 
 .button__violeta:hover{
     scale: 115%;
-    box-shadow: 0px 10px 10px #3C3C3B;
+    box-shadow: 0px 10px 10px $gris;
     transition: 300ms ease-in-out;
-    background-color: #4E3E78;
+    background-color: $violeta;
 }
 
 i{
@@ -139,7 +153,7 @@ i{
 
 i:hover{
     transition: 300ms ease-in-out;
-    color: #4E3E78;
+    color: $violeta;
 }
 
 
@@ -179,7 +193,7 @@ nav{
     font-weight: 800;
 }
 .linea{
-    border-bottom: 2px solid #00A18F;
+    border-bottom: 2px solid $verde;
     padding-bottom: 8px;
 }
 .hamb{
@@ -191,7 +205,7 @@ nav{
     background-image: url(assets/tangente_estudio_dise&ntildeo_design_banckground_mis1.jpg);
     background-position: bottom;
     background-size: cover;
-    box-shadow: 0px 10px 20px #4E3E78;
+    box-shadow: 0px 10px 20px $violeta;
     margin-bottom: 100px;
 }
 
@@ -200,10 +214,10 @@ nav{
 }
 /*--footer--*/
 footer{
-    background-color: #00A18F;
+    background-color: $verde;
     align-items: center;
     padding: 16px 16px 16px 16px;
-    box-shadow: 0px -10px 10px #4E3E78;
+    box-shadow: 0px -10px 10px $violeta;
 
         div{
             display: flex;
@@ -226,14 +240,14 @@ footer{
             text-decoration: none;
         }
         a:hover i{
-            box-shadow: 0px 6px 6px #3C3C3B;
+            box-shadow: 0px 6px 6px $gris;
         }
 }
 /*--fin-footer--*/
 
 #inicio{
     height:calc(100vh);
-    background: url(assets/Frame\ 4.png);
+    background: url(assets/estudio_tangente_design_background_inicio.png);
     background-size:cover;
     display: flex;
     flex-direction: column;
@@ -242,10 +256,11 @@ footer{
     padding-bottom: 100px;
     background-position: center;
     z-index: 9;
-    box-shadow: 0px 10px 20px #4E3E78;
+    box-shadow: 0px 10px 20px $violeta;
     h3{
         width: 90%;
         margin-bottom: 16px;
+        text-shadow:2px 2px 4px $verde;
     }
 }
 
@@ -253,7 +268,7 @@ footer{
 .portfolio_grid{
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: repeat(12, 300px);
+    grid-template-rows: repeat(9, 400px);
     gap: 8px;
     margin-top: 24px;
 }
@@ -263,7 +278,7 @@ footer{
     transition: 100ms ease-in-out;
     position: relative;
     background-size: cover;
-    background-position: center;
+    background-position: top center;
     background-repeat: no-repeat;
 }
 
@@ -280,7 +295,7 @@ footer{
 
 .portfolio__text{
     width: 100%;
-    background-color: #fff8e1dc;
+    background-color: $biege;
     position: absolute;
     bottom: 0;
     line-height: 50px;
@@ -289,9 +304,32 @@ footer{
 
 }
 
-.newjobs12, .newjobs11, .newjobs10, .newjobs9, .newjobs8, .newjobs7, .newjobs6, .newjobs5, .newjobs4, .newjobs3, .newjobs2, .newjobs1{
-    background-image: url(assets/facebook_post_tangente_comida_l.jpg);
-
+.newjobs9{
+    background-image: url(assets/estudio_tangente_design_ultimos-trabajos_9.jpg);
+}
+.newjobs8{
+    background-image: url(assets/estudio_tangente_design_ultimos-trabajos_8.jpg);
+}
+.newjobs7{
+    background-image: url(assets/estudio_tangente_design_ultimos-trabajos_7.jpg);
+}
+.newjobs6{
+    background-image: url(assets/estudio_tangente_design_ultimos-trabajos_6.jpg);
+}
+.newjobs5{
+    background-image: url(assets/estudio_tangente_design_ultimos-trabajos_5.jpg);
+}
+.newjobs4{
+    background-image: url(assets/estudio_tangente_design_ultimos-trabajos_4.jpg);
+}
+.newjobs3{
+    background-image: url(assets/estudio_tangente_design_ultimos-trabajos_3.jpg);
+}
+.newjobs2{
+    background-image: url(assets/estudio_tangente_design_ultimos-trabajos_2.jpg);
+}
+.newjobs1 {
+    background-image: url(assets/estudio_tangente_design_ultimos-trabajos_1.jpg);
 }
 
 /*--fin-ultimos-trabajos-*/
@@ -304,7 +342,7 @@ footer{
     line-height: 32px;
     width: 32px;
     border-radius: 50%;
-    box-shadow: 0px 4px 4px #3C3C3B;
+    box-shadow: 0px 4px 4px $gris;
     margin-left: 4px;
 }
 
@@ -314,18 +352,18 @@ footer{
 
 
 .icon__verde{
-    background-color:#00A18F;
-    color: #FFF8E1;
+    background-color: $verde;
+    color: $biege;
 }
 
 .icon__beige{
-    background-color:#FFF8E1;
-    color:#00A18F;
+    background-color:$biege;
+    color:$verde;
 }
 
 .icon__beige-v{
-    background-color:#FFF8E1;
-    color:#4E3E78;
+    background-color:$biege;
+    color:$violeta;
 }
 
 
@@ -341,9 +379,9 @@ footer{
     width: 100%;
     background-color: #818180;
     border-radius: 4px;
-    border: solid #00A18F;
+    border: solid $verde;
     border-width: 0px 2px 2px 0px;
-    color: #FFF8E1;
+    color: $biege;
     margin-bottom: 20px;
     min-height: 48px;
     padding-left: 10px;
@@ -356,7 +394,7 @@ textarea.casillas{
 
 .casillas::placeholder{
     font-size: 16px;
-    color: #FFF8E1;
+    color: $biege;
     font-style: italic;
 }
 
@@ -410,7 +448,7 @@ form{
     transform: scale(125%);
     transition: 300ms;
     a i{
-        color: #00A18F!important;
+        color: $verde!important;
     }
 }
 
@@ -444,9 +482,9 @@ form{
     "comentario comentario"
     "none nombre";
     padding: 16px;
-    background-color: #00A18F;
+    background-color: $verde;
     margin-bottom: 40px;
-    box-shadow: 10px 10px 0px #00A18F;
+    box-shadow: 10px 10px 0px $verde;
     background-color: #818180!important;
 }
 
@@ -454,7 +492,7 @@ form{
 .card h4{
     grid-area: empresa!important;
     height: auto;
-    color: #FFF8E1;
+    color: $biege;
     align-self: center;
     margin-left: 16px;
 
@@ -464,7 +502,7 @@ form{
     grid-area: nombre;
     height: auto;
     text-align: right;
-    color: #FFF8E1;
+    color: $biege;
     padding-right: 10px;
     padding-top: 10px;
 }
@@ -479,7 +517,7 @@ form{
 
 .card img{
     grid-area: logoCliente;
-    background-color:#FFF8E1;
+    background-color:$biege;
     border-radius: 50%;
     width: 66px;
     height: 66px;
@@ -496,7 +534,7 @@ form{
             margin-bottom: 60px;
         }
         div img{
-            box-shadow: -16px 16px 0px #00A18F;
+            box-shadow: -16px 16px 0px $verde;
             width: 60%;
             max-width: 500px;
             height:max-content;
@@ -553,7 +591,7 @@ form{
 /*--servicios--*/
 
 #cuadro div{
-    background-color: #4E3E78;
+    background-color: $violeta;
     border-radius: 24px;
     padding: 20px;
         h3{
@@ -668,7 +706,7 @@ justify-content: space-between;
     display: flex;
     flex-direction: row;
     align-items: center;
-    background-color: #4E3E78;
+    background-color: $violeta;
     width: fit-content;
     padding: 10px 20px 10px 20px;
     border-radius: 16px;
@@ -684,10 +722,7 @@ justify-content: space-between;
 /*--fin portfolio--*/
 
 @media screen and (min-width:480px) {
-    .portfolio_grid{
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(6, 300px);
-    }
+
     .cierre__fondo{
         background-size: 75%;
     }
@@ -701,7 +736,7 @@ justify-content: space-between;
 
     .portfolio_grid{
         grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(4, 300px);
+        grid-template-rows: repeat(3, 400px);
     }
 
     .c2{
