--- a/style.scss
+++ b/style.scss
@@ -719,6 +719,10 @@ justify-content: space-between;
     padding-top: 60px;
 }
 
+.altu{
+    max-height: 800px;
+}
+
 /*--fin portfolio--*/
 
 @media screen and (min-width:480px) {
