--- a/style.css
+++ b/style.css
@@ -724,6 +724,10 @@ form {
   padding-top: 60px;
 }
 
+.altu {
+  max-height: 800px;
+}
+
 /*--fin portfolio--*/
 @media screen and (min-width: 480px) {
   .cierre__fondo {
