--- a/style.css
+++ b/style.css
@@ -37,6 +37,8 @@ body {
   justify-content: center;
   margin-bottom: 40px;
   margin-top: 40px;
+  padding-left: 16px;
+  padding-right: 16px;
 }
 
 .flex {
@@ -133,13 +135,15 @@ h6 {
   box-shadow: 0px 10px 10px #3C3C3B;
   transition: 300ms ease-in-out;
   background-color: #4E3E78;
+  color: #FFF8E1;
 }
 
 .button__violeta:hover {
   scale: 115%;
-  box-shadow: 0px 10px 10px #3C3C3B;
+  box-shadow: 0px 4px 4px #4E3E78;
   transition: 300ms ease-in-out;
-  background-color: #4E3E78;
+  background-color: #00A18F;
+  color: #FFF8E1;
 }
 
 i {
@@ -195,7 +199,7 @@ nav {
   font-size: 30px;
 }
 
-#cabezera {
+.cabezera {
   height: 30vh;
   background-image: url(assets/tangente_estudio_dise&ntildeo_design_banckground_mis1.jpg);
   background-position: bottom;
@@ -208,6 +212,7 @@ nav {
   max-width: 1600px;
 }
 
+/*--fin header--*/
 /*--footer--*/
 footer {
   background-color: #00A18F;
@@ -239,6 +244,7 @@ footer div img {
 }
 
 /*--fin-footer--*/
+/*--hero-*/
 #inicio {
   height: 100vh;
   background: url(assets/estudio_tangente_design_background_inicio.png);
@@ -255,9 +261,10 @@ footer div img {
 #inicio h3 {
   width: 90%;
   margin-bottom: 16px;
-  text-shadow: 2px 2px 4px #00A18F;
+  text-shadow: 2px 2px 1px #3C3C3B;
 }
 
+/*--fin-hero-*/
 /*--ultimos-trabajos-*/
 .portfolio_grid {
   display: grid;
@@ -363,13 +370,17 @@ footer div img {
   color: #4E3E78;
 }
 
-.icon_field h6 {
+.icon_field a {
+  text-decoration: none;
+}
+.icon_field a h6 {
   display: inline-block;
   margin-top: 20px;
   margin-bottom: 20px;
 }
 
-/*--iconos-*/
+/*--fin iconos-*/
+/*--final de pag-*/
 .casillas {
   width: 100%;
   background-color: #818180;
@@ -415,6 +426,7 @@ form {
 .enviar {
   float: right;
   margin: 0px;
+  line-height: 22px;
 }
 
 .c2 {
@@ -473,7 +485,7 @@ form {
   background-size: 100%;
 }
 
-/*--fin-iconos-*/
+/*--fin final de pag-*/
 /*--card--*/
 .card {
   border-radius: 16px !important;
@@ -481,7 +493,7 @@ form {
   max-width: 346px;
   height: auto;
   display: grid !important;
-  grid-template-columns: 66px 180px;
+  grid-template-columns: 66px auto;
   grid-template-rows: 0.4fr 1fr 0.1fr;
   grid-template-areas: "logoCliente empresa" "comentario comentario" "none nombre";
   padding: 16px;
@@ -552,6 +564,7 @@ form {
   padding-bottom: 80px;
   display: flex;
   flex-flow: row;
+  flex-wrap: wrap;
   justify-content: space-between;
   gap: 20px;
   width: 100%;
@@ -587,6 +600,9 @@ form {
 
 /*--fin quienesomos--*/
 /*--servicios--*/
+#cuadro {
+  margin-left: 24px;
+}
 #cuadro div {
   background-color: #4E3E78;
   border-radius: 24px;
@@ -595,6 +611,8 @@ form {
 #cuadro div h3 {
   margin-bottom: 18px;
   padding-left: 20px;
+  display: inline;
+  width: 100%;
 }
 
 #otros {
@@ -605,7 +623,19 @@ form {
 }
 
 .icon-serv {
-  width: 50%;
+  margin-bottom: 16px;
+}
+.icon-serv i {
+  display: inline-block;
+  margin-left: 4px;
+  font-size: 40px;
+  line-height: 65px;
+  height: 65px;
+  width: 65px;
+}
+.icon-serv h6 {
+  display: inline-block;
+  margin-left: 16px;
 }
 
 /*--fin-servicios--*/
@@ -644,6 +674,10 @@ form {
 
 .noline {
   text-decoration: none;
+}
+
+#botonesfin {
+  margin-bottom: 80px;
 }
 
 /*--fin-contacto--*/
@@ -738,6 +772,7 @@ form {
 }
 
 /*--fin portfolio--*/
+/*--@queries--*/
 @media screen and (min-width: 480px) {
   .cierre__fondo {
     background-size: 75%;
@@ -768,6 +803,9 @@ form {
   .icon-serv {
     width: 33%;
   }
+  .perfil {
+    width: 30%;
+  }
 }
 @media screen and (max-width: 720px) {
   #botonesfin {
@@ -795,11 +833,17 @@ form {
   }
 }
 @media screen and (max-width: 1140px) {
+  #formulariocontacto {
+    width: 100%;
+  }
   #contacto {
     max-height: 600px;
     width: 100%;
     margin-left: 0px;
     margin-right: 16px;
+  }
+  #otros div {
+    width: 50%;
   }
 }
 @media screen and (min-width: 1140px) {
@@ -809,4 +853,5 @@ form {
   .portfolio img {
     width: calc(25% - 20px);
   }
-}/*# sourceMappingURL=style.css.map */
+}
+/*--fin- @queries--*//*# sourceMappingURL=style.css.map */
