--- a/style.css
+++ b/style.css
@@ -19,7 +19,8 @@ html {
 }
 
 body {
-  background-color: #3C3C3B !important;
+  background-color: #3c3c3b;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23818180' fill-opacity='0.07'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
   margin: 0px;
   padding: 0px;
 }
@@ -247,7 +248,7 @@ footer div img {
 /*--hero-*/
 #inicio {
   height: 100vh;
-  background: url(assets/estudio_tangente_design_background_inicio.png);
+  background: url(assets/estudio_tangente_design_background_inicio-main.jpg);
   background-size: cover;
   display: flex;
   flex-direction: column;
@@ -259,9 +260,13 @@ footer div img {
   box-shadow: 0px 10px 20px #4E3E78;
 }
 #inicio h3 {
-  width: 90%;
+  width: auto;
+  max-width: 90%;
   margin-bottom: 16px;
-  text-shadow: 2px 2px 1px #3C3C3B;
+  background-color: rgba(78, 62, 120, 0.75);
+  padding: 16px;
+  border-radius: 8px;
+  text-shadow: 2px 2px 2px #3C3C3B;
 }
 
 /*--fin-hero-*/
@@ -446,6 +451,10 @@ form {
   padding-right: 10px;
 }
 
+#final::-webkit-scrollbar {
+  display: none;
+}
+
 .up {
   font-size: 32px !important;
   display: inline-block;
@@ -600,15 +609,12 @@ form {
 
 /*--fin quienesomos--*/
 /*--servicios--*/
-#cuadro {
-  margin-left: 24px;
-}
-#cuadro div {
+#cuadro div div {
   background-color: #4E3E78;
   border-radius: 24px;
   padding: 20px;
 }
-#cuadro div h3 {
+#cuadro div div h3 {
   margin-bottom: 18px;
   padding-left: 20px;
   display: inline;
@@ -654,6 +660,10 @@ form {
   margin-top: -160px;
 }
 
+#ruleta::-webkit-scrollbar {
+  display: none;
+}
+
 .corto {
   width: 60%;
   margin: 0 auto;
@@ -667,9 +677,13 @@ form {
   max-height: 300px;
   padding: 30px;
   margin-left: 60px;
-  background-image: url(assets/Frame\ 3.png);
-  background-size: cover;
-  background-position: center;
+  background-color: #FFF8E1;
+  background-image: url(assets/estudio_tangente_design_lapices_background.jpg);
+  background-size: 40%;
+  background-position: right bottom;
+  background-repeat: no-repeat;
+  border-radius: 8px;
+  box-shadow: 0px 2px 4px #00A18F;
 }
 
 .noline {
@@ -771,6 +785,10 @@ form {
   border-radius: 16px;
 }
 
+#varios {
+  margin-bottom: 80px;
+}
+
 /*--fin portfolio--*/
 /*--@queries--*/
 @media screen and (min-width: 480px) {
@@ -779,6 +797,15 @@ form {
   }
   .marcadores {
     width: 33%;
+  }
+}
+@media screen and (max-width: 480px) {
+  .icon_field i {
+    display: block;
+    margin-bottom: 8px;
+  }
+  .icon_field h6 {
+    margin-left: 0px;
   }
 }
 @media screen and (min-width: 720px) {
@@ -808,6 +835,10 @@ form {
   }
 }
 @media screen and (max-width: 720px) {
+  #inicio {
+    background: url(assets/estudio_tangente_design_background_inicio-cel.jpg);
+    background-position: 53% 50%;
+  }
   #botonesfin {
     flex-direction: column;
     align-items: center;
@@ -830,6 +861,7 @@ form {
     margin-left: 0px !important;
     padding: 0 !important;
     display: inline-block !important;
+    width: 100% !important;
   }
 }
 @media screen and (max-width: 1140px) {
