--- a/style.scss
+++ b/style.scss
@@ -21,7 +21,8 @@ html{
 }
 
 body{
-    background-color: $gris!important;
+    background-color: #3c3c3b;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23818180' fill-opacity='0.07'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
     margin: 0px;
     padding: 0px;
 }
@@ -93,7 +94,6 @@ h3{
     font-size: 24px;
     font-weight: 200;
 }
-
 
 h4{
     font-size: 20px!important;
@@ -177,6 +177,7 @@ i:hover{
 .logo{
     max-width: 100px;
 }
+
 #navbarNav{
     justify-content: end;
 }
@@ -247,7 +248,7 @@ footer{
 /*--hero-*/
 #inicio{
     height:calc(100vh);
-    background: url(assets/estudio_tangente_design_background_inicio.png);
+    background: url(assets/estudio_tangente_design_background_inicio-main.jpg);
     background-size:cover;
     display: flex;
     flex-direction: column;
@@ -258,9 +259,13 @@ footer{
     z-index: 9;
     box-shadow: 0px 10px 20px $violeta;
     h3{
-        width: 90%;
+        width: auto;
+        max-width: 90%;
         margin-bottom: 16px;
-        text-shadow:2px 2px 1px $gris;
+        background-color: rgba($violeta, $alpha: 0.75);
+        padding: 16px;
+        border-radius: 8px;
+        text-shadow: 2px 2px 2px $gris;
     }
 }
 /*--fin-hero-*/
@@ -429,6 +434,10 @@ form{
     padding-right: 10px;
 }
 
+#final::-webkit-scrollbar{
+    display: none;
+}
+
 .up{
     font-size: 32px!important;
     display: inline-block;
@@ -585,16 +594,17 @@ form{
 
 /*--servicios--*/
 #cuadro {
-    margin-left: 24px;
     div{
-        background-color: $violeta;
-        border-radius: 24px;
-        padding: 20px;
-        h3{
-            margin-bottom: 18px;
-            padding-left: 20px;
-            display: inline;
-            width: 100%;
+        div{
+            background-color: $violeta;
+            border-radius: 24px;
+            padding: 20px;
+            h3{
+                margin-bottom: 18px;
+                padding-left: 20px;
+                display: inline;
+                width: 100%;
+            }
         }
     }
 }
@@ -638,6 +648,10 @@ justify-content: space-between;
     margin-top: -160px;
 }
 
+#ruleta::-webkit-scrollbar{
+    display: none;
+}
+
 .corto{
     width: 60%;
     margin: 0 auto;
@@ -651,9 +665,13 @@ justify-content: space-between;
     max-height: 300px;
     padding: 30px;
     margin-left: 60px;
-    background-image: url(assets/Frame\ 3.png);
-    background-size: cover;
-    background-position: center;
+    background-color: $biege;
+    background-image: url(assets/estudio_tangente_design_lapices_background.jpg);
+    background-size: 40%;
+    background-position: right bottom;
+    background-repeat: no-repeat;
+    border-radius: 8px;
+    box-shadow: 0px 2px 4px $verde;
 }
 
 .noline{
@@ -755,6 +773,9 @@ justify-content: space-between;
 .carousel-inner{
     border-radius: 16px;
 }
+#varios{
+    margin-bottom: 80px;
+}
 /*--fin portfolio--*/
 
 /*--@queries--*/
@@ -768,6 +789,17 @@ justify-content: space-between;
     }
 }
 
+@media screen and (max-width:480px) {
+    .icon_field{
+        i{
+            display: block;
+            margin-bottom: 8px;
+        }
+        h6{
+            margin-left: 0px;
+        }
+    }
+}
 
 @media screen and (min-width:720px) {
 
@@ -798,6 +830,10 @@ justify-content: space-between;
 }
 
 @media screen and (max-width:720px) {
+    #inicio{
+        background: url(assets/estudio_tangente_design_background_inicio-cel.jpg);
+        background-position: 53% 50%;
+    }
 
     #botonesfin{
         flex-direction: column;
@@ -821,6 +857,7 @@ justify-content: space-between;
         margin-left: 0px!important;
         padding: 0!important;
         display: inline-block!important;
+        width: 100%!important;
     }
 }
 
